@@ -359,23 +359,30 @@ gimp_display_shell_scale_set_dot_for_dot (GimpDisplayShell *shell,
  * @zoom_type: whether to zoom in, our or to a specific scale
  * @scale:     ignored unless @zoom_type == %GIMP_ZOOM_TO
  *
- * This function calls gimp_display_shell_scale_to() using the
- * position of the mouse pointer as coordinates.
+ * This function calls gimp_display_shell_scale_to(). It tries to be
+ * smart whether to use the position of the mouse pointer or the
+ * center of the display as coordinates.+
  **/
 void
 gimp_display_shell_scale (GimpDisplayShell *shell,
                           GimpZoomType      zoom_type,
                           gdouble           new_scale)
 {
-  gint x, y;
+  GdkEvent *event;
+  gint      x, y;
 
   g_return_if_fail (GIMP_IS_DISPLAY_SHELL (shell));
+  g_return_if_fail (shell->canvas != NULL);
 
   x = shell->disp_width  / 2;
   y = shell->disp_height / 2;
 
-  if (shell->canvas)
-    gtk_widget_get_pointer (GTK_WIDGET (shell->canvas), &x, &y);
+  event = gtk_get_current_event ();
+
+  if (! event || gtk_get_event_widget (event) == GTK_WIDGET (shell))
+    {
+      gtk_widget_get_pointer (shell->canvas, &x, &y);
+    }
 
   gimp_display_shell_scale_to (shell, zoom_type, new_scale, x, y);
 }
